--- a/css/_slider.css
+++ b/css/_slider.css
@@ -1,5 +1,3 @@
-@import url("_sliderAnimation.css");
-
 .new-products {
     font-family: 'Montserrat', sans-serif;
     padding: 60px;
@@ -27,11 +25,12 @@
     margin: 60px 0;
 }
 .new-products .product-box {
-    padding: 5px;
+    padding: 10px;
 }
 .new-products .product-content {
     height: 100%;
     background: #ffffff;
+    border-radius: 5px;
 }
 
 /* Product prices */
