--- a/css/_slider.css
+++ b/css/_slider.css
@@ -23,6 +23,7 @@
 
 .new-products .slider {
     margin: 60px 0;
+    width: 100%;
 }
 .new-products .product-box {
     padding: 10px;
@@ -31,6 +32,18 @@
     height: 100%;
     background: #ffffff;
     border-radius: 5px;
+}
+    /* Overwriting default Flickity styles */
+.flickity-viewport {
+    width: 100%;
+}
+.flickity-prev-next-button.previous {
+    left: -40px;
+    background: transparent;
+}
+.flickity-prev-next-button.next {
+    right: -40px;
+    background: transparent;
 }
 
 /* Product prices */
