Work on styles details

--- a/css/_slider.css
+++ b/css/_slider.css
@@ -33,7 +33,9 @@
     background: #ffffff;
     border-radius: 5px;
 }
-    /* Overwriting default Flickity styles */
+
+/* Slider - overwriting default Flickity styles */
+
 .flickity-viewport {
     width: 100%;
 }
